# Leegion-Framework-v2.0.1

./: .flake8  .gitignore  .leegion_signature  AUTHOR.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v2.0.0.md  create_release.sh  leegion_manager.py  main.py  mypy.ini  pyproject.toml  release.sh
.github/workflows/: ci.yml
config/: __init__.py  config.json  settings.py
core/: __init__.py  backup.py  banner.py  base_module.py  logger.py  monitoring.py  security.py  signature.py  utils.py
docs/: USER_MANUAL.md
logs/: .gitkeep
modules/: __init__.py  command_helper.py  directory_bruteforce.py  file_downloader.py  nmap_scanner.py  reverse_shell_generator.py  ssl_analyzer.py  subdomain_enum.py  vpn_manager.py  wpscan_integration.py
reports/: __init__.py  report_generator.py
reports/output/: .gitkeep  leegion_results.db
test_reports/: Nmap_Scanner_20250716_185406.json  Nmap_Scanner_20250716_235842.json  Nmap_Scanner_20250716_235846.json  Nmap_Scanner_20250716_235854.json  Nmap_Scanner_20250716_235953.json  Nmap_Scanner_20250717_002026.json  Nmap_Scanner_20250717_002458.json  Nmap_Scanner_20250717_003031.json  Nmap_Scanner_20250717_015202.json
tests/: __init__.py  test_core.py  test_integration.py  test_performance.py  test_security.py
vpn_configs/: .gitkeep  Sadistic.ovpn
wordlists/: subdomains.txt
wordlists/dirb/: common.txt
