[project]
name = "leegion-framework"
version = "2.0.0"
description = "Enhanced Cybersecurity Toolkit for Ethical Hacking & Penetration Testing"
authors = [
    {name = "Leegion", email = "roothaktivity@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["cybersecurity", "penetration-testing", "ethical-hacking", "security-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "cryptography>=45.0.5",
    "dnspython>=2.7.0",
    "python-nmap>=0.7.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/RootHaktivity/Leegion-Framework-v2.0"
Repository = "https://github.com/RootHaktivity/Leegion-Framework-v2.0"
Documentation = "https://github.com/RootHaktivity/Leegion-Framework-v2.0#readme"
Issues = "https://github.com/RootHaktivity/Leegion-Framework-v2.0/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "config*", "reports*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
